# backend-macrolyze

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  alembic.ini  macrolyze.db  pyproject.toml  requirements.txt
alembic/: env.py
src/backend/: __about__.py  init_db.py  main.py
src/backend/core/: database.py  settings.py
src/backend/models/: __init__.py  food.py  food_group.py  food_group_item.py  meal.py  meal_food.py  user.py  weekly_tracker.py
src/backend/routes/: food_groups.py  foods.py  meals.py  users.py  weekly_tracker.py
src/backend/schemas/: __init__.py  food.py  food_group.py  meal.py  user.py  weekly_tracker.py
src/backend/services/: food_group_service.py  food_service.py  meal_service.py  user_service.py  weekly_tracker_service.py
tests/: __init__.py
